--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,16 +1,18 @@
 // colors
 $color-primary: #386fa4;
 $color-primary-2: #b0e0e6;
-//$color-primary-hover: #3c3ca5;
-//$color-primary-light: #ceceff;
+$color-primary-hover: #3c3ca5;
+$color-primary-light: #ceceff;
 $color-secondary: #007ba7;
 $color-secondary-2: #b0c4de;
 $color-secondary-3: #008080;
 $color-secondary-4: #4682b4;
+$color-secondary-5: #4c956c;
 $color-secondary-dark: #2b4141;
 $color-secondary-light: #e8f1f8;
 $color-error: #d52c2c;
-$color-warning: #fff0bd;
+$color-warning: #ffba08;
+$color-warning-2: #fff0bd;
 
 $color-text: #1e1e1e;
 $color-text-2: #100b00;
@@ -44,5 +46,6 @@ $screen-xxl: 1440px;
 
 // misc
 $border-radius: 8px;
+$border-radius-sharp: 4px;
 $transition: 150ms ease;
 $transition-short: 100ms ease;
